[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pz80"
dynamic = ["version"]
description = 'Z80 assembler & disassembler'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["z80", "assembler", "disassembler"]
authors = [
  { name = "kudouta", email = "0x710cafe0@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.scripts]
pz80 = "pz80.__main__:main"

[project.urls]
Documentation = "https://github.com/kudouta/pz80#readme"
Issues = "https://github.com/kudouta/pz80/issues"
Source = "https://github.com/kudouta/pz80"

[tool.hatch.version]
path = "src/pz80/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pz80 tests}"

[tool.coverage.run]
source_pkgs = ["pz80", "tests"]
branch = true
parallel = true
omit = [
  "src/pz80/__about__.py",
]

[tool.coverage.paths]
pz80 = ["src/pz80", "*/pz80/src/pz80"]
tests = ["tests", "*/pz80/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "UP"]
ignore = [
    "T201",    # `print` found
    "SIM102",  # Use a single `if` statement instead of nested `if` statements
    "PERF401", #Use a list comprehension to create a transformed list
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--cov=pz80 --cov-report=term-missing"
testpaths = ["tests"]
